samples/_failures_safe/1761515331_1f25cf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0060d6f3.c: In function ‘transpose_matrix’:
./samples/SAFE/__tmp_0060d6f3.c:148:5: error: expected declaration or statement at end of input
  148 |     }
      |     ^
